Exercicio Biblioteca Boletim com Lista de Funcoes Inserir, listar, Excluir, alterar nota e frequencia

--- a/ExercicioBibliotecaBoletim/ExercicioBibliotecaBoletim/ExercicioBibliotecaBoletim.csproj
+++ b/ExercicioBibliotecaBoletim/ExercicioBibliotecaBoletim/ExercicioBibliotecaBoletim.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ListaFuncoes\CrudEscola.cs" />
     <Compile Include="ListaFuncoes\Funcoes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
